fix image flicker
fix image flicker while hover+scale

--- a/src/components/Home/BookItem.module.scss
+++ b/src/components/Home/BookItem.module.scss
@@ -13,7 +13,9 @@
   background-color: var(--color-white-dark);
   position: relative;
   cursor: pointer;
-
+  will-change: transform;
+  transform: translateZ(0);
+  backface-visibility: hidden;
   &:hover {
     transform: scale(1.01) translateY(-0.3rem);
     box-shadow: 0 1rem 2.5rem rgba($color: #000000, $alpha: 0.5);
